replaced old files

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,12 @@
-<p>header works!</p>
+<div class="header">
+    <table >
+        <tr>
+            <td><img routerLink="" src="assets/mulogogold.png" alt=""></td>
+            <td><h2>                               </h2></td>
+            <td><h2  routerLink="courses" >Courses</h2></td>
+            <td><h2  routerLink="faculty" >Faculty</h2></td>
+            <td><h2   routerLink="research" >Research</h2></td>
+        </tr>
+    </table>
+</div>
+
